removed extra white space on phone and fixed some sizing issues

--- a/css/film-map-of-the-world/film-map-of-the-world.css
+++ b/css/film-map-of-the-world/film-map-of-the-world.css
@@ -1,16 +1,25 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic);
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .header{
   z-index:1000;
   position:absolute;
   top:0;
   left:50%;
   width:100%;
-  max-width:42rem;
+  max-width:40rem;
   background-color:#1a1a1a;
   font-family:'Futura',Helvetica,Arial,sans-serif;
   padding:0 1rem;
-  /* transform:translate(-50%,-106%); */
+  transform:translate(-50%,-106%);
   transform:translate(-50%,-3px);
   border:2px solid #4878b1;
 }
@@ -67,10 +76,10 @@
   font-family:'Futura',Helvetica,Arial,sans-serif;
   color: #c9c9c9;
   position:absolute;
-  top:20%;
+  top:50%;
   left:50%;
   width:90%;
-  max-width:30rem;
+  max-width:25rem;
   max-height:5rem;
   transform:translate(-50%,-50%);
   border-radius:6px;
@@ -203,7 +212,7 @@
   top:50%;
   left:50%;
   width:90%;
-  max-width:30rem;
+  max-width:35rem;
   transform:translate(-50%,-50%);
   border-radius:6px;
   border:2px solid #ecd06b;
